--- a/webview/main.css
+++ b/webview/main.css
@@ -84,6 +84,29 @@ html, body {
   }
 }
 
+.nav {
+  width: 100%;
+  height: 32px;
+  background-color: white;
+  border-bottom: 1px solid #d90429;
+  line-height: 32px;
+}
+
+.nav span {
+  margin-left: 5%;
+}
+
+.nav input {
+  height: 28px;
+  margin: 1px 0;
+  padding: 0;
+  border: 0;
+  border-bottom: 2px solid #d90429;
+  float: right;
+  margin-right: 5%;
+  background-color: #eee;
+}
+
 #gallery ul {
     display: flex;
     flex-wrap: wrap;
